[package]
name = "geocab"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.3"
mini-alloc = "0.4.2"
h3o = { version = "0.6.0", default-features = false }
substrate-geohash = "0.13.0"
substrate-fixed = "0.5.9"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
